--- a/index.html
+++ b/index.html
@@ -13,27 +13,40 @@
     <h1>Blackjack</h1>
   </header>
   <main>
-    <h2>Good Luck!</h2>
-    <div id="play-button-row">
-      <button id="d-button">Deal</button>
-      <button id="h-button">Hit</button>
-      <button id="s-button">Stay</button>
+    <h2 class="heading-margin">Good Luck!</h2>
+    <div class="container-margin">
+      <div id="totals-row">
+        <div class="grid">
+          <p><strong>Bank Roll:</strong> <span id="bank-roll">$500</span></p>
+          <p><strong>Bet Amount:</strong> <span id="bet">$0</span></p>
+        </div>
+        <div id="bet-button-row">
+          <p>Click to add to bet amount:</p>
+          <button>$1</button>
+          <button>$10</button>
+          <button>$50</button>
+          <button>$100</button>
+        </div>
+      </div>
     </div>
-    <div id="bet-button-row">
-      <h3>Click to add to bet amount:</h3>
-      <button>$1</button>
-      <button>$10</button>
-      <button>$50</button>
-      <button>$100</button>
+    <div class="container-margin" id="game-play">
+      <div id="play-button-row">
+        <button id="d-button">Deal</button>
+        <button id="h-button">Hit</button>
+        <button id="s-button">Stay</button>
+      </div>
+      <p>Player Score: <span id="p-score">0</span></p>
+      <div id="hands">
+        <div id="dealer">
+          <h2>Dealer's Hand</h2>
+          <div id="dealer-hand"></div>
+        </div>
+        <div id="player">
+          <h2>Player's Hand</h2>
+          <div id="player-hand"></div>
+        </div>
+      </div>
     </div>
-    <div id="totals-row">
-      <p><strong>Bank Roll:</strong> $500</p>
-      <p><strong>Bet Amount:</strong> $0</p>
-    </div>
-    <h2>Dealer's Hand</h2>
-    <div id="dealer-hand"></div>
-    <h2>Player's Hand</h2>
-    <div id="player-hand"></div>
   </main>
   
 </body>
