--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <h1>Blackjack</h1>
   </header>
   <main>
-    <h2 class="heading-margin">Good Luck!</h2>
-    <div class="container-margin">
+    <div class="heading-margin">
       <div id="totals-row">
-        <div class="grid">
-          <p><strong>Bank Roll:</strong> <span id="bank-roll">$500</span></p>
+        <div class="flex">
+          <p><strong>Bank Roll:</strong> <span id="b-roll">$500</span></p>
           <p><strong>Bet Amount:</strong> <span id="bet">$0</span></p>
         </div>
         <div id="bet-button-row">
@@ -33,7 +32,7 @@
       <div id="play-button-row">
         <button id="d-button">Deal</button>
         <button id="h-button">Hit</button>
-        <button id="s-button">Stay</button>
+        <button id="s-button">Stand</button>
       </div>
       <p>Player Score: <span id="p-score">0</span></p>
       <div id="hands">
