--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blackjack</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lobster&display=swap" rel="stylesheet">
@@ -45,14 +47,15 @@
         </div>
         <div id="bet-button-row">
           <p>Click to add to bet amount:</p>
-          <button>$1</button>
-          <button>$10</button>
-          <button>$50</button>
-          <button>$100</button>
+          <button class="btn btn-dark btn-small">$1</button>
+          <button class="btn btn-dark btn-small">$10</button>
+          <button class="btn btn-dark btn-small">$50</button>
+          <button class="btn btn-dark btn-small">$100</button>
         </div>
       </div>
     </div>
   </main>
-  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
