make app responsive on different viewport sizes

--- a/index.html
+++ b/index.html
@@ -38,27 +38,28 @@
         <p class="align-labels">Player Score: <span id="p-score">0</span></p>
       </div>
     </div>
-    <div class="heading-margin">
-      <div class="container-margin" id="game-play">
-        <div id="play-button-row">
-          <button id="d-button">Deal</button>
-          <button id="h-button">Hit</button>
-          <button id="s-button">Stand</button>
-        </div>
+    <div class="center" id="game-play">
+      <div id="play-button-row">
+        <button id="d-button">Deal</button>
+        <button id="h-button">Hit</button>
+        <button id="s-button">Stand</button>
       </div>
-      <div id="totals-row">
-        <div class="bet-totals">
-          <p>Bank Roll: <span id="b-roll">$500</span></p>
-          <p>Bet Amount: <span id="bet">$0</span></p>
-        </div>
-        <div id="bet-button-row">
-          <p>Click to add to bet amount:</p>
+    </div>
+    <div id="totals-row">
+      <div class="bet-totals">
+        <p id="bank-roll">Bank Roll: <span id="b-roll">$500</span></p>
+        <p>Bet Amount: <span id="bet">$0</span></p>
+      </div>
+      <div id="bet-button-row">
+        <p>Click to add to bet amount:</p>
+        <div>
           <button class="btn btn-dark btn-small">$1</button>
           <button class="btn btn-dark btn-small">$10</button>
           <button class="btn btn-dark btn-small">$50</button>
           <button class="btn btn-dark btn-small">$100</button>
         </div>
       </div>
+  
     </div>
   </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
