--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
 <body>
   <header>
     <h1>Blackjack</h1>
+    <button id="add-to-bank-roll">Buy Chips</button>
   </header>
   <main>
+    <!-- Add form to buy chips -->
     <h2></h2>
+    <form id="buy-chips-form">
+      <h2 class="span-2">How much would you like to purchase?</h2>
+      <label for="buy-chips">Buy Chips</label>
+      <input type="number" id="buy-chips" name="buy-chips" min="1" max="1000" placeholder="1-1000">
+      <button class="span-2 margin" type="submit">Buy</button>
+    </form>
     <div id="hands">
       <div id="dealer">
         <h2>Dealer's Hand</h2>
