--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <!-- Favicon -->
   <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
   <!-- Scripts -->
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <script defer src="js/main.js"></script>
 </head>
 <body>
@@ -26,14 +28,16 @@
     <button id="add-to-bank-roll">Buy Chips</button>
   </header>
   <main>
-    <!-- Add form to buy chips -->
     <h2></h2>
-    <form id="buy-chips-form">
-      <h2 class="span-2">How much would you like to purchase?</h2>
-      <label for="buy-chips">Buy Chips</label>
-      <input type="number" id="buy-chips" name="buy-chips" min="1" max="1000" placeholder="1-1000">
-      <button class="span-2 margin" type="submit">Buy</button>
-    </form>
+    <div class="hidden" id="buy-chips-container">
+      <div id="buy-chips-form">
+        <h2 class="span-2">How much would you like to purchase?</h2>
+        <label for="buy-chips">Buy Chips</label>
+        <input type="number" id="buy-chips" name="buy-chips" min="1" max="1000" placeholder="1-1000">
+        <button id="buy-btn">Buy</button>
+        <button id="cancel-btn" class="justify-start">Cancel</button>
+      </div>
+    </div>
     <div id="hands">
       <div id="dealer">
         <h2>Dealer's Hand</h2>
@@ -69,7 +73,5 @@
       </div>
     </div>
   </main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
