--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
 <body>
   <header>
     <h1>Blackjack</h1>
-    <button id="add-to-bank-roll">Buy Chips</button>
+    <button id="add-to-bank-roll" class="btn btn-success">Buy Chips</button>
   </header>
   <main>
     <h2></h2>
     <div class="hidden" id="buy-chips-container">
       <div id="buy-chips-form">
-        <h2 class="span-2">How much would you like to purchase?</h2>
-        <label for="buy-chips">Buy Chips</label>
-        <input type="number" id="buy-chips" name="buy-chips">
-        <button id="buy-btn">Buy</button>
-        <button id="cancel-btn" class="justify-start">Cancel</button>
+        <div class="span-2 w-100 flex-wrap">
+          <h3>How much would you like to purchase?</h3>
+        </div>
+        <input min="0" type="number" id="buy-chips" name="buy-chips">
+        <div class="flex-row w-100">
+          <button id="buy-btn" class="btn btn-success btn-lg">Buy</button>
+          <button id="cancel-btn" class="btn btn-success btn-lg">Cancel</button>
+        </div>
       </div>
     </div>
     <div id="hands">
