--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </div>
     <div class="center" id="game-play">
       <div id="play-button-row">
-        <button id="d-button">Deal</button>
-        <button id="h-button">Hit</button>
-        <button id="s-button">Stand</button>
+        <button id="d-button" class="btn btn-light">Deal</button>
+        <button id="h-button" class="btn btn-light">Hit</button>
+        <button id="s-button" class="btn btn-light">Stand</button>
       </div>
     </div>
     <div id="totals-row">
